v0.1 "Frodo" (17-01-2016)
-------------------------
[+] Pantalla de Inicio/Welcome Window
[+] Ventana Sobre GSD/About GSD Window
[+] Publicar Nuevo Estado/Send New Post

v0.2 "Gimli" (23-01-2016)
-------------------------
[+] Primitivo Soporte Multiidioma/Simple Multilanguaje Support
[+] Sencillo Parser para XML/Simple GSD Parser to XML
[+] Botón para enviar quits/New button to send quits
[+] Sistema de notificación de errores/New error system
[-] Posibilidad de enviar quits pulsando "enter"/Send quits using "enter"

v0.3 "Arathorn" (23-03-2016)
----------------------------
[+] Posibilidad de configurar una cuenta de forma indefinida, sin necesidad
de rellenar los datos de conexión cada vez que se ejecuta el programa a
excepción de la contraseña.
[+] Posibilidad de eliminar el archivo de configuración desde el cliente.
[+] Capacidad de responder a estados (in_reply_to=id)
[+] Capacidad para leer menciones (notificaciones)
[+] Capacidad para leer estados de la línea del usuario (home timeline)
[+] Capacidad para leer estados de la línea temporal pública (public timeline)

v0.4 "Aragorn" (??-??-2016)
---------------------------
[+] Posibilidad de buscar (y mostrar) un estado a través de su ID.

-------------------------
-------------------------
[+] Añadido/Added
[-] Eliminado/Removed