@@ -234,11 +234,59 @@ void find_status_by_id(char data[4][32], GtkEntry *gtk_id)
 	fseek(xml, 0L, SEEK_END);
 	int filesize = ftell(xml);
 	rewind(xml);
+	if (filesize > 0) {
+		char xml_data[filesize];
+		fread(xml_data, filesize, filesize, xml);
+		fclose(xml);
+		printf("%s", xml_data);
+		if ((GSDParser("error", xml_data)) == 0) {
+			print_reply(xml_data);
+		}
+	}
+	else {
+		window_message(MSG_27);
+	}
+}
+
+void delete_status_by_id(char *id)
+{
+	char *protocol = user_data[0];
+	char *user = user_data[1];
+	char *server = user_data[2];
+	char *password = user_data[3];
+	char url[100];
+	strcpy(url, protocol);
+	strcat(url, "://");
+	strcat(url, server);
+	strcat(url, "/api/statuses/destroy.xml");
+
+	FILE *xml = fopen("temp/file.xml", "wb");
+	CURL *curl = curl_easy_init();
+	curl_easy_setopt(curl, CURLOPT_WRITEFUNCTION, save_xml);
+	curl_easy_setopt(curl, CURLOPT_WRITEDATA, xml);
+	curl_easy_setopt(curl, CURLOPT_URL, url);
+
+	curl_easy_setopt(curl, CURLOPT_HTTPAUTH, CURLAUTH_BASIC);
+	curl_easy_setopt(curl, CURLOPT_USERNAME, user);
+	curl_easy_setopt(curl, CURLOPT_PASSWORD, password);
+	char buffer[3+strlen(id)];
+	strcpy(buffer, "id=");
+	strcat(buffer, id);
+
+	curl_easy_setopt(curl, CURLOPT_POSTFIELDS, buffer);
+	curl_easy_perform(curl);
+
+	curl_easy_cleanup(curl);
+	fclose(xml);
+	xml = fopen("temp/file.xml", "r");
+	fseek(xml, 0L, SEEK_END);
+	int filesize = ftell(xml);
+	rewind(xml);
 	char xml_data[filesize];
 	fread(xml_data, filesize, filesize, xml);
 	fclose(xml);
 	printf("%s", xml_data);
-	if ((GSDParser("error", xml_data)) == 0) {
-		print_reply(xml_data);
+	if ((GSDParser("<error>", xml_data)) == 0) {
+		window_message(MSG_29);
 	}
 }
