@@ -24,4 +24,6 @@ void load_status(char data[4][32], char *n, int mode);
 
 void find_status_by_id(char data[4][32], GtkEntry *gtk_id);
 
+void delete_status_by_id(char *id);
+
 #endif 
